Fix post_meta.html when used without location

--- a/themes/PaperMod/layouts/partials/post_meta.html
+++ b/themes/PaperMod/layouts/partials/post_meta.html
@@ -13,7 +13,7 @@
 {{- end }}
 
 {{- with (partial "author.html" .) }}
-{{- $scratch.Add "meta" . }}
+{{- $scratch.Add "meta" (slice .) }}
 {{- end }}
 
 {{- with (partial "location.html" .) }}
